NetBSD Problem Report #44664
From www@NetBSD.org Wed Mar 2 09:41:05 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
by www.NetBSD.org (Postfix) with ESMTP id 62C6963B8E0
for <gnats-bugs@gnats.NetBSD.org>; Wed, 2 Mar 2011 09:41:05 +0000 (UTC)
Message-Id: <20110302094104.CE98E63B8CE@www.NetBSD.org>
Date: Wed, 2 Mar 2011 09:41:04 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Misplaced #endif in interrupt.c.
X-Send-Pr-Version: www-1.0
>Number: 44664
>Category: port-arc
>Synopsis: Misplaced #endif in interrupt.c.
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: tsutsui
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Wed Mar 02 09:45:00 +0000 2011
>Closed-Date: Fri Mar 04 13:11:12 +0000 2011
>Last-Modified: Fri Mar 04 13:11:12 +0000 2011
>Originator: Henning Petersen
>Release: NetBSD-current
>Organization:
>Environment:
>Description:
Misplaced #endif in interrupt.c.
>How-To-Repeat:
>Fix:
diff -u -r1.8 interrupt.c
--- sys/arch/arc/arc/interrupt.c 20 Feb 2011 07:52:42 -0000 1.8
+++ sys/arch/arc/arc/interrupt.c 2 Mar 2011 08:41:10 -0000
@@ -124,8 +124,8 @@
* effect, clears the timer interrupt request.
*/
mips3_cp0_compare_write(0);
- }
#endif
+ }
/*
* If there is an independent timer interrupt handler,
>Release-Note:
>Audit-Trail:
From: "Izumi Tsutsui" <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/44664 CVS commit: src/sys/arch/arc/arc
Date: Wed, 2 Mar 2011 10:51:05 +0000
Module Name: src
Committed By: tsutsui
Date: Wed Mar 2 10:51:04 UTC 2011
Modified Files:
src/sys/arch/arc/arc: interrupt.c
Log Message:
Fix misplaced #endif. PR port-arc/44664
XXX: I'll also remove ENABLE_INT5_STATCLOCK soon since no visible improvements.
To generate a diff of this commit:
cvs rdiff -u -r1.8 -r1.9 src/sys/arch/arc/arc/interrupt.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
Responsible-Changed-From-To: port-arc-maintainer->tsutsui
Responsible-Changed-By: tsutsui@NetBSD.org
Responsible-Changed-When: Fri, 04 Mar 2011 22:11:12 +0900
Responsible-Changed-Why:
State-Changed-From-To: open->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Fri, 04 Mar 2011 22:11:12 +0900
State-Changed-Why:
Fixed, thanks.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.