Fix misplaced #endif.  PR port-arc/44664

XXX: I'll also remove ENABLE_INT5_STATCLOCK soon since no visible improvements.